why choose and renovate home responsive

--- a/index.html
+++ b/index.html
@@ -2295,29 +2295,40 @@
 
       <!-- renovate your home start  -->
       <section
-        class="bg-black p-6 min-h-[29.167vw] flex justify-center items-center"
+        class="bg-black px-[10vw] py-[16.977vw] md:p-6 min-h-[29.167vw] flex justify-center items-center"
       >
         <div
           class="flex flex-col gap-3 justify-center items-center container-general"
         >
           <h1
-            class="text-white text-[7.907vw] md:text-6xl font-normal md:tracking-normal text-center md:text-left lg:leading-[77px] md:leading-7 leading-[9.488vw]"
+            class="text-white text-[7.907vw] md:text-6xl font-normal text-center md:text-left md:leading-7 leading-[9.488vw]"
           >
             Ready to renovate your home?
           </h1>
           <p
-            class="text-white lg:text-lg font-normal lg:leading-5 md:leading-4 sm:leading-3 tracking-normal text-center"
+            class="text-white text-[3.256vw] md:text-lg font-normal py-[6.512vw] px-[5.116vw] md:py-0 md:px-0 leading-[3.907vw] md:leading-4 w-[69.767vw] md:w-[35.521vw] text-center"
           >
             Drop us a line to discuss how Renoexpert can help you to organize
             your dream Home.
           </p>
           <a
-            class="bg-[#FF6D43] py-4 px-10 text-[#EEECE8] rounded-full cursor-pointer stretch-btn"
+            class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
           >
-            <span>Make a free Quote</span>
-            <div
-              class="stretch-arrow ml-2 bg-white inline-block mb-[0.2rem]"
-            ></div>
+            <span>Make a free quote</span>
+
+            <svg
+              class="ml-[1.042vw] inline"
+              width="54"
+              height="7"
+              viewBox="0 0 54 7"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
+                fill="#EEECE8"
+              />
+            </svg>
           </a>
         </div>
       </section>
@@ -2325,17 +2336,19 @@
 
       <!-- why choose section start  -->
       <section
-        class="bg-white min-h[41.667vw] w-auto flex flex-col pt-28 container-exceptional"
+        class="bg-white min-h[41.667vw] w-auto flex flex-col py-[15.116vw] md:pt-28 container-exceptional"
       >
         <div
           class="flex flex-col justify-center items-center gap-6 mb-[6.667vw]"
         >
           <h1
-            class="text-5xl font-normal tracking-normal text-center lg:leading-[52px] md:leading-10 sm:leading-7 text-[#291E18]"
+            class="text-[7.907vw] md:text-5xl px-[10vw] md:px-0 font-normal tracking-normal text-center leading-[9.488vw] md:leading-7 text-[#291E18]"
           >
             Why Choose <span class="text-[#FF6D43]">Renoexpert</span>?
           </h1>
-          <p class="text-[#291E18] opacity-[80%] w-[50vw] text-center mt-4">
+          <p
+            class="text-[#291E18] opacity-[80%] mx-[7.907vw] md:w-[50vw] text:[3.721vw] leading-[4.884vw] md:leading-[1.25vw] text-center md:mt-4"
+          >
             At Renoexpert, we understand that choosing a partner for your home
             renovation is a significant decision. Our commitment goes beyond
             craftsmanship—we offer a unique blend of expertise, dedication, and
@@ -2343,24 +2356,28 @@
             choose us as their trusted renovation partner.
           </p>
         </div>
-        <div class="flex m-auto items-center text-center gap-[6.667vw]">
+        <div
+          class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
+        >
           <div class="l-side flex flex-col gap-[3.333vw]">
             <!-- div 1 -->
-            <div class="flex gap-[0.469vw] justify-center items-center">
+            <div
+              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+            >
               <div
-                class="h-[7.5vw] w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
+                class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
               >
                 <img class="img-fluid" src="./asset/img/team.png" alt="team" />
               </div>
               <div>
                 <h3
-                  class="text-[1.563vw] font-normal lg:leading-9 md:leading-6 sm:leading-3 tracking-normal text-left choose_head_text"
+                  class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
                 >
                   Expert Team
                 </h3>
 
                 <p
-                  class="text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left w-[20.833vw]"
+                  class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
                 >
                   Our team comprises seasoned professionals with a wealth of
                   experience. From skilled craftsmen to creative designers.
@@ -2368,63 +2385,60 @@
               </div>
             </div>
             <!-- div 1 -->
-            <!-- div 2 -->
-            <div class="flex gap-[0.469vw] justify-center items-center">
+            <!-- div 1 -->
+            <div
+              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+            >
               <div
-                class="h-[7.5vw] w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
+                class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
               >
-                <img
-                  class="img-fluid"
-                  src="./asset/img/dollar.png"
-                  alt="team"
-                />
+                <img class="img-fluid" src="./asset/img/team.png" alt="team" />
               </div>
               <div>
                 <h3
-                  class="text-[1.563vw] font-normal lg:leading-9 md:leading-6 sm:leading-3 tracking-normal text-left choose_head_text"
+                  class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
                 >
-                  Budget-Friendly Solutions
+                  Expert Team
                 </h3>
+
                 <p
-                  class="text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left w-[20.833vw]"
+                  class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
                 >
-                  we understand the importance of staying within budget without
-                  sacrificing quality. Our commitment to budget-friendly
-                  solutions ensures that your dream home remains both
-                  spectacular and financially sensible
+                  Our team comprises seasoned professionals with a wealth of
+                  experience. From skilled craftsmen to creative designers.
                 </p>
               </div>
             </div>
-            <!-- div 2 -->
-            <!-- div 3 -->
-            <div class="flex gap-[0.469vw] justify-center items-center">
+            <!-- div 1 -->
+            <!-- div 1 -->
+            <div
+              class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
+            >
               <div
-                class="h-[7.5vw] w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
+                class="w-[43.953vw] p-[3.488vw] md:p-0 aspect-[1/1] md:h-[7.5vw] md:w-[7.5vw] bg-[#c6e4ee] flex justify-center items-center"
               >
-                <img
-                  class="img-fluid"
-                  src="./asset/img/clock_time.png"
-                  alt="team"
-                />
+                <img class="img-fluid" src="./asset/img/team.png" alt="team" />
               </div>
               <div>
                 <h3
-                  class="text-[1.563vw] font-normal lg:leading-9 md:leading-6 sm:leading-3 tracking-normal text-left choose_head_text"
+                  class="md:text-[1.563vw] text-[4.186vw] font-normal lg:leading-9 md:leading-6 tracking-normal text-left choose_head_text"
                 >
-                  Timely Delivery
+                  Expert Team
                 </h3>
+
                 <p
-                  class="text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left w-[20.833vw]"
+                  class="md:text-[0.833vw] font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left text-[2.791vw] md:w-[20.833vw]"
                 >
-                  We value your time as much as you do. With Renoexpert, expect
-                  not just a beautifully renovated space, but also timely
-                  project delivery.
+                  Our team comprises seasoned professionals with a wealth of
+                  experience. From skilled craftsmen to creative designers.
                 </p>
               </div>
             </div>
-            <!-- div 3 -->
+            <!-- div 1 -->
           </div>
-          <div class="r-side bg-[#c6e4ee] flex justify-end items-center w-full">
+          <div
+            class="r-side bg-[#c6e4ee] md:flex justify-end items-center w-full hidden"
+          >
             <img
               class="px-[6.667vw] pt-[5vw] img-fluid"
               src="./asset/img/man_image.png"
