blog and contact section responsive

--- a/index.html
+++ b/index.html
@@ -2466,9 +2466,13 @@
 
       <!-- blog section start  -->
       <section class="bg-black py-[8.333vw]">
-        <div class="flex gap-[3.333vw] justify-center container-general">
+        <div
+          class="flex flex-col md:flex-row gap-[3.333vw] justify-center container-general"
+        >
           <div>
-            <div class="flex gap-[1.875vw] mb-[2.708vw] justify-center">
+            <div
+              class="flex gap-[1.875vw] mb-[2.708vw] justify-center md:justify-start"
+            >
               <span class="pt-[1.042vw]">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -2476,25 +2480,26 @@
                   height="8"
                   viewBox="0 0 8 8"
                   fill="none"
+                  class="hidden md:block"
                 >
                   <circle cx="4" cy="4" r="4" fill="#FF6D43" />
                 </svg>
               </span>
               <h1
-                class="text-[#EEECE8] text-left not-italic text-[2.24vw] font-normal lg:leading-[52px] md:leading-10 sm:leading-7"
+                class="text-[#EEECE8] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-10 leading-7"
               >
                 Explore Our <br />
                 <span class="text-[#FF6D43]">Renovation Blogs</span>
               </h1>
             </div>
             <p
-              class="text-[#EEECE8] w-[30vw] text-base font-normal lg:leading-6 md:leading-4 sm:leading-3 tracking-normal text-left mb-[2.656vw]"
+              class="text-[#EEECE8] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-[3.953vw] text-center md:text-left mb-[14.186vw] md:mb-[2.656vw] px-[13.953vw] md:px-0"
             >
               Dive into the world of design, innovation, and home transformation
               with our curated blog.
             </p>
             <a
-              class="border-[#BEB8AE] text-white border py-4 px-10 rounded-full cursor-pointer stretch-btn"
+              class="border-[#BEB8AE] text-white border py-4 px-10 rounded-full cursor-pointer stretch-btn hidden md:inline-block"
             >
               <span>SEE ALL</span>
               <div class="bg-white ml-2 inline-block mb-[0.2rem]"></div>
@@ -2502,33 +2507,35 @@
           </div>
           <div>
             <div
-              class="flex gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[4.167vw]"
             >
               <img
-                class="img-fluid"
+                class="img-fluid mx-[10vw] md:mx-0"
                 src="./asset/img/blog_img1.png"
                 alt="blog image"
               />
-              <div class="flex flex-col gap-[1.042vw]">
+              <div
+                class="flex flex-col gap-[2.326vw] md:gap-[1.042vw] mx-[10vw] md:mx-0"
+              >
                 <h3
-                  class="text-[1.563vw] font-normal lg:leading-8 md:leading-5 sm:leading-3 tracking-normal text-left text-white"
+                  class="text-[4.884vw] md:text-[1.563vw] font-normal md:leading-7 leading-[5.86vw] tracking-normal text-left text-white"
                 >
                   Creative Ideas for Small Spaces
                 </h3>
                 <p
-                  class="text-[0.729vw] font-normal lg:leading-5 md:leading-4 sm:leading-3 tracking-normal text-left text-[#EEECE8] w-[18.75vw]"
+                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-3 tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
                 >
                   Discover innovative ways to maximize space without
                   compromising on style.
                 </p>
-                <div class="flex items-center gap-[0.833vw]">
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
                   <img
                     class="img-fluid"
                     src="./asset/img/date_pointer_bg.png"
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[0.625vw] font-normal leading-4 sm:leading-3 tracking-normal text-left text-[#EEECE8]"
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     7 January 2023
                   </p>
@@ -2537,39 +2544,63 @@
             </div>
             <!-- =================================================== -->
             <div
-              class="flex gap-[2.292vw] justify-center items-center pt-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[4.167vw]"
             >
               <img
-                class="img-fluid"
+                class="img-fluid mx-[10vw] md:mx-0"
                 src="./asset/img/blog_img2.png"
                 alt="blog image"
               />
-              <div class="flex flex-col gap-[1.042vw]">
+              <div
+                class="flex flex-col gap-[2.326vw] md:gap-[1.042vw] mx-[10vw] md:mx-0"
+              >
                 <h3
-                  class="text-[1.563vw] font-normal lg:leading-8 md:leading-5 sm:leading-3 tracking-normal text-left text-white"
+                  class="text-[4.884vw] md:text-[1.563vw] font-normal md:leading-7 leading-[5.86vw] tracking-normal text-left text-white"
                 >
                   The Colors Shaping Home Interiors in 2024
                 </h3>
                 <p
-                  class="text-[0.729vw] font-normal lg:leading-5 md:leading-4 sm:leading-3 tracking-normal text-left text-[#EEECE8] w-[18.75vw]"
+                  class="text-[2.791vw] md:text-[0.729vw] font-normal md:leading-5 leading-3 tracking-normal text-left text-[#EEECE8] md:w-[18.75vw]"
                 >
                   Stay ahead of the curve with a glimpse into the hues and
                   palettes that are making waves in interior design this year.
                 </p>
-                <div class="flex items-center gap-[0.833vw]">
+                <div class="flex items-center gap-[3.256vw] md:gap-[0.833vw]">
                   <img
                     class="img-fluid"
                     src="./asset/img/date_pointer_bg.png"
                     alt="date_pointer_bg"
                   />
                   <p
-                    class="text-[0.625vw] font-normal leading-4 sm:leading-3 tracking-normal text-left text-[#EEECE8]"
+                    class="text-[2.326vw] md:text-[0.625vw] font-normal md:leading-4 leading-[3.721vw] tracking-normal text-left text-[#EEECE8]"
                   >
                     24 December 2023
                   </p>
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="block md:hidden text-center my-[10.93vw]">
+            <a
+              class="border-[#BEB8AE] border py-[4.186vw] px-[6.93vw] md:py-[0.938vw] md:px-[2.448vw] text-white text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
+            >
+              <span>SEE ALL</span>
+
+              <svg
+                class="ml-[1.042vw] inline"
+                width="54"
+                height="7"
+                viewBox="0 0 54 7"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M48.8887 2.99497V0.469971L53.3887 3.49997L48.8887 6.52997V4.00497H0.388672V2.99497H48.8887Z"
+                  fill="#EEECE8"
+                />
+              </svg>
+            </a>
           </div>
         </div>
       </section>
@@ -2579,7 +2610,7 @@
       <section class="bg-white container-general py-[5.833vw]">
         <div>
           <div
-            class="flex gap-[1.875vw] mb-[2.656vw] justify-start items-center"
+            class="flex flex-col md:flex-row gap-[1.875vw] mb-[2.656vw] justify-start items-center"
           >
             <img
               class="img-fluid"
@@ -2593,18 +2624,19 @@
                 height="8"
                 viewBox="0 0 8 8"
                 fill="none"
+                class="hidden md:block"
               >
                 <circle cx="4" cy="4" r="4" fill="#FF6D43" />
               </svg>
             </span>
             <div>
               <h1
-                class="text-[#291E18] text-left not-italic text-[2.24vw] font-normal lg:leading-[52px] md:leading-10 sm:leading-7"
+                class="text-[#291E18] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-[52px] leading-7"
               >
                 Contact us
               </h1>
               <p
-                class="text-[#291E18] w-[30vw] text-base font-normal lg:leading-6 md:leading-5 sm:leading-3 tracking-normal text-left pt-1"
+                class="text-[#291E18] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-3 tracking-normal text-center md:text-left pt-1"
               >
                 We will call you back within 30 minutes.
               </p>
@@ -2615,13 +2647,15 @@
           <!-- component -->
 
           <form>
-            <div class="mb-[1.042vw] flex gap-[0.625vw]">
+            <div
+              class="md:mb-[1.042vw] flex flex-col md:flex-row gap-[3.023vw] md:gap-[0.625vw]"
+            >
               <input
                 type="email"
                 name="email"
                 id="email"
                 placeholder="Your E-mail *"
-                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[0.625vw] px-[1.25vw] text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
 
               <input
@@ -2629,26 +2663,28 @@
                 name="number"
                 id="number"
                 placeholder="Your phone number *"
-                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[0.625vw] px-[1.25vw] text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
               />
             </div>
-            <div class="mb-[1.042vw]">
+            <div class="md:mb-[1.042vw]">
               <textarea
                 rows="4"
                 name="message"
                 id="message"
                 placeholder="Conversation subject *"
-                class="w-full resize-none border border-[#e0e0e0] bg-[#FBFBFB] py-[0.625vw] px-[1.25vw] text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md"
+                class="w-full resize-none border border-[#e0e0e0] bg-[#FBFBFB] py-[3.256vw] md:py-[0.625vw] px-[7.674vw] md:px-[1.25vw] text-[4.651vw] mx-[2.326vw] md:mx-0 md:text-[0.833vw] font-medium text-[#BEB8AE] outline-none focus:border-[#FF6D43] focus:shadow-md mt-4 md:mt-0"
               ></textarea>
             </div>
-            <div class="flex gap-2 mb-[1.042vw]">
+            <div
+              class="flex gap-2 mb-[1.042vw] justify-center md:justify-start px-[10vw] md:px-0"
+            >
               <input
                 type="checkbox"
                 class="before:content[''] peer relative h-5 w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all before:absolute before:top-2/4 before:left-2/4 before:block before:h-12 before:w-12 before:-translate-y-2/4 before:-translate-x-2/4 before:rounded-full before:bg-blue-gray-500 before:opacity-0 before:transition-opacity checked:border-[#FF6D43] checked:bg-[#FF6D43] checked:before:bg-[#FF6D43] hover:before:opacity-10"
                 id="checkbox"
               />
               <p
-                class="text-[0.833vw] font-normal leading-5 sm:leading-3 tracking-normal text-left"
+                class="text-[2.791vw] md:text-[0.833vw] font-normal leading-5 sm:leading-3 tracking-normal text-left"
               >
                 By sending a message, I agree to
                 <span class="text-[#FF6D43]"> the privacy policy </span>and
@@ -2657,7 +2693,7 @@
             </div>
             <div>
               <a
-                class="bg-[#FF6D43] py-[0.938vw] px-[2.448vw] text-[#EEECE8] text-[0.729vw] rounded-full cursor-pointer flex items-center w-[39.063vw]"
+                class="bg-[#FF6D43] py[4.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0"
               >
                 <span>Drop a message</span>
 
