our service work start

--- a/index.html
+++ b/index.html
@@ -1755,7 +1755,7 @@
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
                     <h1
-                      class="text-gray-900 lg:text-[2.24vw] md:text-[2.24vw] sm:text-[4.651vw] lg:mb-[0.781vw] md:mb-[0.781vw] sm:mb-[5.116vw]"
+                      class="text-gray-900 md:text-[2.24vw] text-[4.651vw] md:mb-[0.781vw] mb-[5.116vw]"
                     >
                       Painting
                     </h1>
