service section update

--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,9 @@
             class="services-slider grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-[3.229vw]"
           >
             <!-- here started the single service section  -->
-            <div class="md:w-[37.917vw] w-full md:aspect-[729/416] flex">
+            <div
+              class="md:w-[37.917vw] w-full md:aspect-[729/416] flex flex-col-reverse md:flex-row"
+            >
               <div class="w-3/4 h-full bg-white">
                 <div class="flex mt-[4.142vw] justify-center items-center">
                   <div class="w-4/5">
@@ -1789,7 +1791,7 @@
                   </div>
                 </div>
               </div>
-              <div class="w-1/4 h-full">
+              <div class="w-[100%] md:w-1/4 h-1/4 md:h-full">
                 <img
                   src="asset/img/service_paint.png"
                   class="h-full"
