--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a
                   id="services_menu"
                   class="text-[#291E18] text-[0.833vw]"
-                  href="#"
+                  href="./painting-service.html"
                   >Services
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
