service section responsive done and conflict resolve

--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
     <!-- google review section end -->
 
     <!-- service section start  -->
-    <section class="service bg-[#EEECE8] min-h-[35rem] w-full">
+    <section class="bg-[#EEECE8] min-h-[35rem] w-full">
       <div class="container-general mx-auto">
         <div class="md:flex gap-[1.875vw] items-center py-[4.167vw]">
           <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none"
