painting  & simulation section done

--- a/painting-service.html
+++ b/painting-service.html
@@ -104,7 +104,7 @@
       </header>
       <!-- header ends -->
 
-      <!-- here started the hero section  -->
+      <!-- here started the painting section  -->
       <section
         class="hero border-[#BEB8AE] bg-[#EEECE8] w-full border-b-[0.1rem]"
       >
@@ -112,13 +112,11 @@
           class="aspect-[430/450] md:aspect-[1720/702] container-exceptional"
         >
           <div
-            class="flex flex-col md:flex-row md:h-full md:w-full justify-center md:justify-between"
+            class="flex flex-col md:flex-row md:h-full md:w-full items-center justify-center md:justify-between"
           >
-            <div
-              class="w-full md:w-[35%] flex justify-center md:justify-end items-center"
-            >
-              <div class="w-full md:w-[37.6875rem]">
-                <div class="md:flex gap-[1.875vw] items-start justify-center">
+            <div class="w-full md:w-[37.6875rem]">
+              <div class="md:flex gap-[1.875vw] items-start justify-start">
+                <div class="pt-6">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="8"
@@ -129,33 +127,41 @@
                   >
                     <circle cx="4" cy="4" r="4" fill="#FF6D43" />
                   </svg>
-                  <h1
-                    class="text-[#291E18] text-start items-start text-[6.512vw] md:text-[2.24vw]"
-                  >
-                    Best painting service in Singapore
-                  </h1>
                 </div>
-                <p
-                  class="text-[4.186vw] md:text-[0.938vw] text-center md:text-start my-[10vw] md:my-[2.656vw] text-[#291E18CC] mx-[10vw] md:mx-0"
+
+                <h1
+                  class="text-[#291E18] text-center md:text-start items-center md:items-start text-[6.512vw] md:text-[2.24vw]"
                 >
-                  Transform your living spaces into vibrant canvases with
-                  Renoexpert's exceptional painting services. Our commitment
-                  goes beyond adding color to walls – we strive to infuse life,
-                  personality, and a touch of elegance into every brushstroke.
-                  Discover how our expert painters can redefine the ambiance of
-                  your home.
-                </p>
-                <div class="text-center md:flex md:gap-2 my-[10.93vw] md:my-0">
-                  <a
-                    class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
-                  >
-                    <img src="./asset/icons/painting_service.png" alt="" />
-                  </a>
-                  <span>Make a free quote</span>
-                </div>
+                  Best painting service in Singapore
+                </h1>
+              </div>
+              <p
+                class="text-[4.186vw] md:text-[0.938vw] text-center md:text-start my-[10vw] md:my-[2.656vw] text-[#291E18CC] mx-[10vw] md:mx-0"
+              >
+                Transform your living spaces into vibrant canvases with
+                Renoexpert's exceptional painting services. Our commitment goes
+                beyond adding color to walls – we strive to infuse life,
+                personality, and a touch of elegance into every brushstroke.
+                Discover how our expert painters can redefine the ambiance of
+                your home.
+              </p>
+              <div
+                class="text-center md:flex md:gap-2 items-center my-[10.93vw] md:my-0"
+              >
+                <a
+                  class="bg-[#FF6D43] py-[4.186vw] px-[4.93vw] md:py-[1.823vw] md:px-[1.979vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
+                  href="#simulation"
+                >
+                  <img src="./asset/icons/painting_service.png" alt="" />
+                </a>
+                <span class="text-center md:text-[0.833vw] md:leading-[1vw]"
+                  >TRY YOUR FAVORITE COLOR</span
+                >
               </div>
             </div>
-            <div class="h-full flex w-[63%] justify-end items-center">
+            <div
+              class="h-full flex w-full md:w-[55.2%] justify-end items-center"
+            >
               <img
                 class=""
                 src="/asset/img/painting_service_img.png"
@@ -166,11 +172,12 @@
           </div>
         </div>
       </section>
-      <!-- here ended the hero section  -->
+      <!-- here ended the painting section  -->
 
       <!-- service section start  -->
       <section
-        class="service bg-[#EEECE8] min-h-[35rem] w-full aspect-[1920/900]"
+        class="bg-[#EEECE8] min-h-[35rem] w-full aspect-[1920/900]"
+        id="simulation"
       >
         <img src="./asset/img/simulation_img.png" alt="simulation" />
         <h1 class="simulation_text md:text-[5vw] text-[#291E184D]">
@@ -183,24 +190,6 @@
       <section
         class="bg-white min-h[41.667vw] w-auto flex flex-col py-[15.116vw] md:pt-28 container-exceptional"
       >
-        <div
-          class="flex flex-col justify-center items-center gap-6 mb-[6.667vw]"
-        >
-          <h1
-            class="text-[7.907vw] md:text-5xl px-[10vw] md:px-0 font-normal tracking-normal text-center leading-[9.488vw] md:leading-7 text-[#291E18]"
-          >
-            Why Choose <span class="text-[#FF6D43]">Renoexpert</span>?
-          </h1>
-          <p
-            class="text-[#291E18] opacity-[80%] mx-[7.907vw] md:w-[50vw] text:[3.721vw] leading-[4.884vw] md:leading-[1.25vw] text-center md:mt-4"
-          >
-            At Renoexpert, we understand that choosing a partner for your home
-            renovation is a significant decision. Our commitment goes beyond
-            craftsmanship—we offer a unique blend of expertise, dedication, and
-            personalized service. Here's why countless homeowners in Singapore
-            choose us as their trusted renovation partner.
-          </p>
-        </div>
         <div
           class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
         >
