our service and all gap fix

--- a/painting-service.html
+++ b/painting-service.html
@@ -164,8 +164,8 @@
             >
               <img
                 class=""
-                src="/asset/img/painting_service_img.png"
-                alt=""
+                src="/asset/img/paint_img2.png"
+                alt="paint image"
                 srcset=""
               />
             </div>
