--- a/index.html
+++ b/index.html
@@ -2308,7 +2308,7 @@
               Request Your Free Reno Quote!
             </h1>
             <p
-              class="text-gray-900 px-[10vw] md:px-0 text-[3.256vw] md:text-[0.938vw] not-italic font-normal leading-[3.907vw] text-center md:text-left lg:leading-7 md:leading-6"
+              class="text-gray-900 px-[10vw] md:px-0 text-[3.256vw] md:text-[0.938vw] not-italic font-normal leading-[3.907vw] text-center md:text-left md:leading-7 pt-[5.116vw] md:pt-0"
             >
               Take the first step towards transforming your space by requesting
               a free, no-obligation renovation quote. Simply fill out the form
@@ -2369,7 +2369,9 @@
       <!-- free quote section end here  -->
 
       <!-- testimonial section start here  -->
-      <section class="bg-[#EEECE8] min-h-[29.167vw] w-full py-[10vw]">
+      <section
+        class="bg-[#EEECE8] md:min-h-[29.167vw] w-full pt-[14.186vw] md:py-[10vw]"
+      >
         <div
           class="container-general flex sm:flex-col md:flex-row justify-between items-center gap-10"
         >
@@ -2381,15 +2383,18 @@
                 height="8"
                 viewBox="0 0 8 8"
                 fill="none"
+                class="hidden md:block"
               >
                 <circle cx="4" cy="4" r="4" fill="#FF6D43" />
               </svg>
-              <h1 class="text-[#291E18] text-center text-[2.25vw] font-normal">
+              <h1
+                class="text-[#291E18] text-center text-[6.512vw] md:text-[2.25vw] font-normal mx-[27.907vw] md:mx-0"
+              >
                 Testimonials
               </h1>
             </div>
             <p
-              class="text-[#291E18] mt-[2.656vw] leading-6 lg:leading-7 md:leading-5 sm:leading-3 w-[27.5vw]"
+              class="text-[#291E18] mt-[2.656vw] leading-[3.907vw] md:leading-[1.25vw] md:w-[27.5vw] text-[3.256vw] md:text-[0.833vw] text-centers mx-[9.767vw] md:mx-0"
             >
               Discover the stories of satisfaction and joy from our valued
               clients. Their experiences with Renoexpert go beyond renovations.
@@ -2538,10 +2543,12 @@
             Ready to renovate your home?
           </h1>
           <p
-            class="text-white text-[3.256vw] md:text-lg font-normal py-[6.512vw] px-[5.116vw] md:py-0 md:px-0 leading-[3.907vw] md:leading-4 w-[69.767vw] md:w-[35.521vw] text-center"
+            class="text-white text-[3.256vw] md:text-lg font-normal pt-[3.512vw] pb-[11.163vw] px-[5.116vw] md:pt-[1.4vw] md:pb-[1.927vw] md:px-0 leading-[3.907vw] md:leading-[1.125vw] md:w-[35.521vw] text-center"
           >
             Drop us a line to discuss how Renoexpert can help you to organize
-            your dream Home.
+            your dream Home.Drop us a line to discuss how Renoexpert can help
+            you to organize your dream Home.Drop us a line to discuss how
+            Renoexpert can help you to organize your dream Home.
           </p>
           <a
             class="bg-[#FF6D43] py-[4.186vw] px-[10.93vw] md:py-[0.938vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
@@ -2579,7 +2586,7 @@
             Why Choose <span class="text-[#FF6D43]">Renoexpert</span>?
           </h1>
           <p
-            class="text-[#291E18] opacity-[80%] mx-[7.907vw] md:w-[50vw] text:[3.721vw] leading-[4.884vw] md:leading-[1.25vw] text-center md:mt-4"
+            class="text-[#291E18] opacity-[80%] mx-[7.907vw] md:w-[50vw] text:[3.721vw] leading-[4.884vw] md:leading-[1.25vw] text-center md:mt-4 pb-[12vw] md:pb-0"
           >
             At Renoexpert, we understand that choosing a partner for your home
             renovation is a significant decision. Our commitment goes beyond
@@ -2591,7 +2598,7 @@
         <div
           class="md:flex m-auto md:items-center text-center md:gap-[6.667vw]"
         >
-          <div class="l-side flex flex-col gap-[3.333vw]">
+          <div class="l-side flex flex-col gap-[15vw] md:gap-[3.333vw]">
             <!-- div 1 -->
             <div
               class="mx-[10vw] md:mx-0 flex gap-[0.469vw] justify-center items-center"
@@ -2724,7 +2731,7 @@
           </div>
           <div>
             <div
-              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center border-b-[0.1px] border-[#BEB8AE] pb-[15vw] md:pb-[4.167vw]"
             >
               <img
                 class="img-fluid mx-[10vw] md:mx-0"
@@ -2761,7 +2768,7 @@
             </div>
             <!-- =================================================== -->
             <div
-              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[4.167vw]"
+              class="flex flex-col-reverse md:flex-row gap-[6.047vw] md:gap-[2.3vw] justify-center items-center pt-[13.5vw] md:pt-[4.167vw]"
             >
               <img
                 class="img-fluid mx-[10vw] md:mx-0"
@@ -2798,7 +2805,7 @@
             </div>
           </div>
 
-          <div class="block md:hidden text-center my-[10.93vw]">
+          <div class="block md:hidden text-center my-[10vw]">
             <a
               class="border-[#BEB8AE] border py-[4.186vw] px-[6.93vw] md:py-[0.938vw] md:px-[2.448vw] text-white text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer inline-block items-center"
             >
@@ -2824,7 +2831,7 @@
       <!-- blog section end -->
 
       <!-- contact us section start  -->
-      <section class="bg-white container-general py-[5.833vw]">
+      <section class="bg-white container-general py-[10.465vw] md:py-[5.833vw]">
         <div>
           <div
             class="flex flex-col md:flex-row gap-[1.875vw] mb-[2.656vw] justify-start items-center"
@@ -2848,12 +2855,12 @@
             </span>
             <div>
               <h1
-                class="text-[#291E18] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-[52px] leading-7"
+                class="text-[#291E18] text-center md:text-left not-italic text-[6.512vw] md:text-[2.24vw] font-normal md:leading-[52px] leading-[7.814vw] pb-[1.86vw] md:pb-0"
               >
                 Contact us
               </h1>
               <p
-                class="text-[#291E18] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-3 tracking-normal text-center md:text-left pt-1"
+                class="text-[#291E18] md:w-[30vw] text-[3.256vw] md:text-base font-normal md:leading-6 leading-3 tracking-normal text-center md:text-left pt-1 pb-[4.651vw] md:pb-0"
               >
                 We will call you back within 30 minutes.
               </p>
@@ -2910,7 +2917,7 @@
             </div>
             <div>
               <a
-                class="bg-[#FF6D43] py[4.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0"
+                class="bg-[#FF6D43] py[14.186vw] md:py-[0.938vw] px-[4.884vw] md:px-[2.448vw] text-[#EEECE8] text-[3.256vw] md:text-[0.729vw] leading-[4.651vw] rounded-full cursor-pointer flex items-center md:w-[39.063vw] mx-[10.233vw] md:mx-0"
               >
                 <span>Drop a message</span>
 
